Fix for static student gradebook alignment: https://moodle.org/mod/forum/discuss.php?d=261626

--- a/style/moodle-rtl.css
+++ b/style/moodle-rtl.css
@@ -19832,7 +19832,11 @@ fieldset[disabled] #dock .dockedtitle.active {
 }
 
 #page-grade-report-grader-index #user-grades {
-  margin-top: 4px;
+  margin-top: 0px;
+}
+
+#page-grade-report-grader-index .left_scroller {
+  padding-top: 18px;
 }
 
 #page-grade-grading-manage #activemethodselector label {
